--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "z-nomp",
+    "name": "k-nomp",
     "version": "0.0.4",
     "description": "KotoCoin (yescrypt) stratum mining pool based on NOMP",
     "keywords": [
@@ -12,9 +12,9 @@
         "koto",
         "yescrypt"
     ],
-    "homepage": "https://github.com/yoshuki43/k-nomp",
+    "homepage": "https://github.com/okoto-xyz/k-nomp",
     "bugs": {
-        "url": "https://github.com/yoshuki43/k-nomp/issues"
+        "url": "https://github.com/okoto-xyz/k-nomp/issues"
     },
     "license": "MIT",
     "author": "Joshua Yabut",
@@ -32,25 +32,25 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/yoshuki43/k-nomp.git"
+        "url": "https://github.com/okoto-xyz/k-nomp.git"
     },
     "dependencies": {
         "async": "2.3.0",
-        "bignum": "0.12.5",
-        "body-parser": "1.17.1",
+        "bignum": "^0.13.0",
+        "body-parser": "^1.18.3",
         "colors": "1.1.2",
-        "compression": "1.6.2",
+        "compression": "^1.7.3",
         "dateformat": "2.0.0",
         "dot": "1.1.1",
-        "express": "4.15.2",
+        "express": "^4.16.4",
         "extend": "3.0.0",
-        "mysql": "2.13.0",
+        "mysql": "^2.16.0",
         "node-json-minify": "1.0.0",
         "node-watch": "0.5.2",
         "nonce": "1.0.4",
         "redis": "2.7.1",
-        "request": "2.81.0",
-        "stratum-pool": "git+https://github.com/yoshuki43/node-stratum-pool-yescrypt.git#koto--hf-dev"
+        "request": "^2.88.0",
+        "stratum-pool": "git+https://github.com/okoto-xyz/node-stratum-pool-koto.git"
     },
     "engines": {
         "node": ">=0.10"
