--- a/package.json
+++ b/package.json
@@ -35,21 +35,21 @@
         "url": "https://github.com/okoto-xyz/k-nomp.git"
     },
     "dependencies": {
-        "async": "2.3.0",
-        "bignum": "^0.13.0",
-        "body-parser": "^1.18.3",
-        "colors": "1.1.2",
-        "compression": "^1.7.3",
-        "dateformat": "2.0.0",
-        "dot": "1.1.1",
-        "express": "^4.16.4",
-        "extend": "3.0.0",
-        "mysql": "^2.16.0",
+        "async": "3.2.0",
+        "bignum": "0.13.1",
+        "body-parser": "1.19.0",
+        "colors": "1.4.0",
+        "compression": "1.7.4",
+        "dateformat": "3.0.3",
+        "dot": "1.1.3",
+        "express": "4.17.1",
+        "extend": "3.0.2",
+        "mysql": "2.18.1",
         "node-json-minify": "1.0.0",
-        "node-watch": "0.5.2",
+        "node-watch": "0.6.4",
         "nonce": "1.0.4",
-        "redis": "2.7.1",
-        "request": "^2.88.0",
+        "redis": "3.0.2",
+        "request": "2.88.2",
         "stratum-pool": "git+https://github.com/okoto-xyz/node-stratum-pool-koto.git"
     },
     "engines": {
